# writto

./: CHANGELOG.md  LICENSE  LICENSE.ja.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsi
src/components/: AboutModal.tsx  Editor.tsx  HelpModal.tsx  Icons.tsx  MenuBar.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TableInsertDialog.tsx
src/contexts/: I18nContext.tsx
src/editor/: checkbox-plugin.ts  hybrid-view.ts  markdown-config.ts  paste-handler.ts  table-widget.ts  theme.ts
src/lib/: export.ts  fs.ts  i18n.ts  updateChecker.ts
