[package]
name = "writto"
version = "0.1.0"
description = "A Tauri App"
authors = ["takahashi.tetsuya"]
edition = "2021"

[lib]
name = "writto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-kit = "0.14"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
] }
